--- a/one_page.html
+++ b/one_page.html
@@ -72,19 +72,45 @@
 
     <div class="page p-2">
         <h1 class="slogan">課程顧問</h1>
-    </div>
-
-    <footer class="footer">
-        <div class="container">
-            <div class="footer-row">
-                <div class="logo">
-                    <img src="assets/images/one_page/logo.svg" alt="LOGO">
+        <div class="flow">
+            <div class="flow-item">
+                <div class="item-circle"></div>
+                <div class="item-content">
+                    <h2>需求訪談</h2>
+                    <div>深度了解需求，給予最適合的建議</div>
                 </div>
-                <div class="copyright">
-                    &copy; appedu 2023.
+            </div>
+            <div class="flow-item">
+                <div class="item-circle" style="background-color: yellow"></div>
+                <div class="item-content">
+                    <h2>需求訪談</h2>
+                    <div>深度了解需求，給予最適合的建議</div>
+                </div>
+            </div>
+            <div class="flow-item">
+                <div class="item-circle"></div>
+                <div class="item-content">
+                    <h2>需求訪談</h2>
+                    <div>深度了解需求，給予最適合的建議</div>
+                </div>
+            </div>
+            <div class="flow-item">
+                <div class="item-circle"></div>
+                <div class="item-content">
+                    <h2>需求訪談</h2>
+                    <div>深度了解需求，給予最適合的建議</div>
+                </div>
+            </div>
+            <div class="flow-item">
+                <div class="item-circle"></div>
+                <div class="item-content">
+                    <h2>需求訪談</h2>
+                    <div>深度了解需求，給予最適合的建議</div>
                 </div>
             </div>
         </div>
+    </div>
+
     </footer>
 </body>
 
