--- a/zz.html
+++ b/zz.html
@@ -8,6 +8,10 @@
     <title>ZZ</title>
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/zz.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@500&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -19,7 +23,14 @@
                 </div>
                 <div class="right-side">
                     <div class="menu">MENU</div>
-                    <div class="buttons">BUTTON</div>
+                    <div class="buttons">
+                        <ul class="link-button">
+                            <li> <a href="#">登入</a>
+                            <li> <a href="#">註冊</a>
+                            <li class="active"> <a href="#">Facebook 登入</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
