--- a/zz.html
+++ b/zz.html
@@ -22,7 +22,16 @@
                     <img src="assets/images/zz/logo.png" alt="LOGO">
                 </div>
                 <div class="right-side">
-                    <div class="menu">MENU</div>
+                    <div class="menu">
+                        <ul>
+                            <li>
+                                <a href="#">探索</a>
+                            </li>
+                            <li>
+                                <a href="#">提案</a>
+                            </li>
+                        </ul>
+                    </div>
                     <div class="buttons">
                         <ul class="link-button">
                             <li> <a href="#">登入</a>
@@ -34,6 +43,36 @@
                 </div>
             </div>
         </div>
+    </div>
+    <div class="main"></div>
+    <div class="footer">
+        <div class="container">
+            <div class="top-side">
+                <div>
+                    <img src="assets/images/zz/logo.png" alt="LOGO">
+                </div>
+                <div class="menu">
+                    <div>
+                        <h2 class="menu-title">幫助</h2>
+                        <ul class="menu-item">
+                            <li><a href="#">常見問題</a></li>
+                            <li><a href="#">常見問題</a></li>
+                            <li><a href="#">常見問題</a></li>
+                        </ul>
+                    </div>
+                    <div>
+                        <h2 class="menu-title">關於</h2>
+                        <ul class="menu-item">
+                            <li><a href="#">常見問題</a></li>
+                            <li><a href="#">常見問題</a></li>
+                            <li><a href="#">常見問題</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="copyright"><span class="copyright-icon">&copy;</span>嘖室股份有限公司</div>
+    </div>
     </div>
 </body>
 
