--- a/zz.html
+++ b/zz.html
@@ -6,12 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ZZ</title>
-    <link rel="stylesheet" href="assets/css/reset.css">
-    <link rel="stylesheet" href="assets/css/zz.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@500&display=swap" rel="stylesheet">
-
+    <link
+        href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;200;300;400;500;600;700;800;900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/reset.css">
+    <link rel="stylesheet" href="assets/css/zz.css">
 </head>
 
 <body>
@@ -34,9 +35,14 @@
                     </div>
                     <div class="buttons">
                         <ul class="link-button">
-                            <li> <a href="#">登入</a>
-                            <li> <a href="#">註冊</a>
-                            <li class="active"> <a href="#">Facebook 登入</a>
+                            <li>
+                                <a href="#">登入</a>
+                            </li>
+                            <li>
+                                <a href="#">註冊</a>
+                            </li>
+                            <li class="active">
+                                <a href="#">Facebook 登入</a>
                             </li>
                         </ul>
                     </div>
@@ -48,31 +54,40 @@
     <div class="footer">
         <div class="container">
             <div class="top-side">
-                <div>
-                    <img src="assets/images/zz/logo.png" alt="LOGO">
-                </div>
+                <div><img src="assets/images/zz/logo.png" alt="LOGO"></div>
                 <div class="menu">
                     <div>
                         <h2 class="menu-title">幫助</h2>
                         <ul class="menu-item">
-                            <li><a href="#">常見問題</a></li>
-                            <li><a href="#">常見問題</a></li>
-                            <li><a href="#">常見問題</a></li>
+                            <li>
+                                <a href="#">常見問題</a>
+                            </li>
+                            <li>
+                                <a href="#">常見問題</a>
+                            </li>
+                            <li>
+                                <a href="#">常見問題</a>
+                            </li>
                         </ul>
                     </div>
                     <div>
                         <h2 class="menu-title">關於</h2>
                         <ul class="menu-item">
-                            <li><a href="#">常見問題</a></li>
-                            <li><a href="#">常見問題</a></li>
-                            <li><a href="#">常見問題</a></li>
+                            <li>
+                                <a href="#">常見問題</a>
+                            </li>
+                            <li>
+                                <a href="#">常見問題</a>
+                            </li>
+                            <li>
+                                <a href="#">常見問題</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="copyright"><span class="copyright-icon">&copy;</span>嘖室股份有限公司</div>
-    </div>
+        <div class="copyright"><span class="copyright-icon">&copy;</span>ZZ股份有限公司</div>
     </div>
 </body>
 
