--- a/animate.html
+++ b/animate.html
@@ -5,18 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rotate</title>
+    <title>Animate.css</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="assets/css/reset.css">
-    <link rel="stylesheet" href="assets/css/spring.css">
-
 </head>
 
 <body>
-    <div class="wrap">
-        <div class="block">
-            <span class="word">春</span>
-        </div>
-    </div>
+    <h1 class="animate__animated animate__bounce">An animated element</h1>
 </body>
 
 </html>
