--- a/cloud.html
+++ b/cloud.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>cloud</title>
+    <title>Cloud</title>
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/cloud.css">
 </head>
 
 <body>
-    <div class="wrap">
+    <div class="bg">
         <div class="cloud"></div>
         <div class="cloud"></div>
         <div class="cloud"></div>
