--- a/transition.html
+++ b/transition.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container">
         <div class="wrap">
-            <div class="block change-color property">
+            <div class="block">
                 TEXT
             </div>
         </div>
