--- a/one_page_rwd..html
+++ b/one_page_rwd..html
@@ -14,6 +14,7 @@
 <body>
     <header class="header">
         <div class="container">
+            <input type="checkbox" id="mobile-menu-trigger">
             <div class="header-row">
                 <div class="logo">
                     <img src="assets/images/one_page/logo.svg" alt="LOGO">
@@ -40,11 +41,11 @@
                         </li>
                     </ul>
                 </div>
-                <div class="mobile-menu-switch">
+                <label for="mobile-menu-trigger" class="mobile-menu-switch">
                     <span></span>
                     <span></span>
                     <span></span>
-                </div>
+                </label>
             </div>
         </div>
     </header>
