--- a/zeczec/index.html
+++ b/zeczec/index.html
@@ -11,6 +11,10 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/main.css">
 </head>
@@ -69,16 +73,20 @@
                         <div>
                             <div class="goal-percentage">1,757%</div>
                         </div>
-                        <div>
+                        <div class="process-info">
                             <div class="project-goal">目標 NT$50,000</div>
-                            <div class="project-current">NT% 878,554</div>
+                            <div class="project-current">NT$ 878,554</div>
                             <div class="project-count">
-                                <div>
-                                    <span>icon</span>
+                                <div class="project-count-item">
+                                    <span>
+                                        <span class="material-symbols-outlined">person</span>
+                                    </span>
                                     <span>720 人</span>
                                 </div>
-                                <div>
-                                    <span>icon</span>
+                                <div class="project-count-item">
+                                    <span>
+                                        <span class="material-symbols-outlined">alarm_on</span>
+                                    </span>
                                     <span>2 天</span>
                                 </div>
                             </div>
