--- a/zeczec/index.html
+++ b/zeczec/index.html
@@ -141,13 +141,13 @@
                             <a href="#">專案內容</a>
                         </li>
                         <li>
-                            <a href="#">專案更新</a>
+                            <a href="#" data-count="2">專案更新</a>
                         </li>
                         <li>
-                            <a href="#">常見問題</a>
+                            <a href="#" data-count="10">常見問題</a>
                         </li>
                         <li>
-                            <a href="#">留言</a>
+                            <a href="#" data-count="1">留言</a>
                         </li>
                     </ul>
                 </div>
