--- a/js_dom.html
+++ b/js_dom.html
@@ -21,6 +21,9 @@
                 Student 2
             </li>
         </ul>
+
+        <input type="text" value="" id="full-name" />
+        <button id="btn">Click Me</button>
     </div>
 </body>
 <script src="assets/js/js_dom.js"></script>
