--- a/media_query_print.html
+++ b/media_query_print.html
@@ -2,133 +2,117 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>One Page</title>
-    <link rel="stylesheet" href="assets/css/reset.css">
-    <link rel="stylesheet" href="assets/css/one_page.css">
-    <link rel="stylesheet" href="assets/css/one_page_rwd.css">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Print Students</title>
+    <style>
+        *,
+        *::after,
+        *::before {
+            padding: 0;
+            margin: 0;
+            box-sizing: border-box;
+        }
+
+        .container {
+            max-width: 1140px;
+            padding: 0 15px;
+            height: 100%;
+            position: relative;
+            margin: auto;
+        }
+
+        .title {
+            line-height: 40px;
+            text-align: center;
+        }
+
+        .table {
+            border-spacing: 0;
+            border-collapse: collapse;
+            width: 100%;
+        }
+
+        .table th,
+        .table td {
+            border: 1px solid #dedede;
+            padding: 10px;
+        }
+
+        .table th {
+            background: #1b75b0;
+            color: #fff;
+        }
+
+        .table-fn {
+            margin: 10px 0;
+            text-align: right;
+        }
+
+        .btn {
+            padding: 10px 15px;
+            border: 0;
+            background: rgb(227, 40, 40);
+            color: #fff;
+            font-size: 14px;
+            cursor: pointer;
+        }
+
+        @media print {
+            .table-fn {
+                display: none;
+            }
+        }
+    </style>
 </head>
 
 <body>
-    <header class="header">
+    <div id="app">
         <div class="container">
-            <div class="header-row">
-                <div class="logo">
-                    <img src="assets/images/one_page/logo.svg" alt="LOGO">
-                </div>
-                <div class="menu">
-                    <ul>
-                        <li>
-                            <a href="#">
-                                <div class="en">About</div>
-                                <div class="zh">關於赫綵</div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <div class="en">Join Us</div>
-                                <div class="zh">加入赫綵</div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <div class="en">Courses</div>
-                                <div class="zh">課程總覽</div>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="mobile-menu-switch">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </div>
+            <h2 class="title">學生成績單</h2>
+            <div class="table-fn">
+                <button class="btn" @click="doPrint">列印</button>
             </div>
-        </div>
-    </header>
-
-    <div class="page p-1">
-        <div class="container">
-            <div class="page-position">
-                <div class="page-row">
-                    <div class="left-side">
-                        <h1 class="slogan">加入赫綵，人生精彩</h1>
-                        <div class="content">
-                            世界上若沒有赫綵，對於人類的改變可想而知。動機，可以說是最單純的力量。愛默生曾經提過，即使斷了一條弦，其餘的三條弦還是要繼續演奏，這就是人生。這句話反映了問題的急切性。深入的探討赫綵，是釐清一切的關鍵。我們都有個共識，若問題很困難，那就勢必不好解決。車爾尼雪夫斯基說過，實踐，是個偉大的揭發者，它暴露一切欺人和自欺。這段話雖短，卻足以改變人類的歷史。赫綵對我來說有著舉足輕重的地位，必須要嚴肅認真的看待。這必定是個前衛大膽的想法。話雖如此，我們卻也不能夠這麼篤定。
-                        </div>
-                    </div>
-                    <div>
-                        <h1 class="slogan">加入赫綵，就是現在</h1>
-                        <div class="form-item">
-                            <input type="text" placeholder="姓名">
-                        </div>
-                        <div class="form-item">
-                            <input type="text" placeholder="信箱">
-                        </div>
-                        <div class="form-button">
-                            <button>立即加入</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>姓名</th>
+                        <th>成績</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <template v-for="(student, sindex) in students" :key="sindex">
+                        <tr>
+                            <td>{{ student.name }}</td>
+                            <td>{{ student.score }}</td>
+                        </tr>
+                    </template>
+                </tbody>
+            </table>
         </div>
     </div>
-
-    <div class="p-2">
-        <h1 class="slogan">課程顧問</h1>
-        <div class="flow">
-            <div class="flow-item">
-                <div class="item-circle"></div>
-                <div class="item-content">
-                    <h2>需求訪談</h2>
-                    <div>深度了解需求，給予最適合的建議</div>
-                </div>
-            </div>
-            <div class="flow-item">
-                <div class="item-circle" style="background-color: yellow"></div>
-                <div class="item-content">
-                    <h2>需求訪談</h2>
-                    <div>深度了解需求，給予最適合的建議</div>
-                </div>
-            </div>
-            <div class="flow-item">
-                <div class="item-circle"></div>
-                <div class="item-content">
-                    <h2>需求訪談</h2>
-                    <div>深度了解需求，給予最適合的建議</div>
-                </div>
-            </div>
-            <div class="flow-item">
-                <div class="item-circle"></div>
-                <div class="item-content">
-                    <h2>需求訪談</h2>
-                    <div>深度了解需求，給予最適合的建議</div>
-                </div>
-            </div>
-            <div class="flow-item">
-                <div class="item-circle"></div>
-                <div class="item-content">
-                    <h2>需求訪談</h2>
-                    <div>深度了解需求，給予最適合的建議</div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <footer class="footer">
-        <div class="container">
-            <div class="footer-row">
-                <div class="logo">
-                    <img src="assets/images/one_page/logo.svg" alt="LOGO">
-                </div>
-                <div class="copyright">
-                    &copy; appedu 2023.
-                </div>
-            </div>
-        </div>
-    </footer>
 </body>
+<script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+<script>
+    Vue.createApp({
+        data() {
+            return {
+                students: [],
+            }
+        },
+        methods: {
+            doPrint() {
+                window.print()
+            },
+        },
+        beforeMount() {
+            this.students.push({ name: 'David', score: 80 })
+            this.students.push({ name: 'Helen', score: 90 })
+            this.students.push({ name: 'John', score: 70 })
+            this.students.push({ name: 'May', score: 60 })
+        },
+    }).mount('#app')
+</script>
 
 </html>
