--- a/js_countdown.html
+++ b/js_countdown.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Countdown</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Aoboshi+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/js_countdown.css">
 </head>
@@ -15,7 +18,7 @@
         <div class="cc">
             <div class="countdown-wrap">
                 <div class="countdown-item">
-                    <div id="countdown-days">111</div>
+                    <div id="countdown-days">20</div>
                     <div class="countdown-unit">Days</div>
                 </div>
                 <div class="countdown-item">
