--- a/js_todolist.html
+++ b/js_todolist.html
@@ -21,8 +21,8 @@
         <div class="todo-item-wrap">
             <ul id="todo-item">
                 <!-- <li>
-                    <div><input type="checkbox"></div>
-                    <div>TEXT</div>
+                    <input type="checkbox">
+                    <span>TEXT</span>
                 </li> -->
             </ul>
         </div>
