--- a/js_todolist_api.html
+++ b/js_todolist_api.html
@@ -41,18 +41,8 @@
                 <button id="todo-uid-btn">確認</button>
             </div>
         </div>
-
-        <div>
-            <input type="file" id="upload-file" accept="image/*" />
-        </div>
-        <div>
-            <button id="do-upload">upload file</button>
-        </div>
-        <div>
-            <img src="" alt="" id="preview">
-        </div>
     </div>
 </body>
-<script type="module" src="assets/js/js_todolist.js"></script>
+<script type="module" src="assets/js/js_todolist_api.js"></script>
 
 </html>
