--- a/public/jquery_demo.html
+++ b/public/jquery_demo.html
@@ -14,6 +14,17 @@
     <div class="container">
         <h1>jQuery Demo</h1>
         <div id="display-account">Account Information.</div>
+        <div>
+            <input type="text" id="account" value="123">
+        </div>
+
+        <ul>
+            <li class="student">1</li>
+            <li class="student">2</li>
+            <li class="student">3</li>
+            <li class="student">4</li>
+            <li class="student">5</li>
+        </ul>
     </div>
 </body>
 <script>
@@ -22,6 +33,36 @@
 
     console.log(elDisAccount.html())
     console.log(elDisAccountDOM.innerHTML)
+
+    let elAccountDOM = document.querySelector('#account');
+    let elAccount = $('#account');
+
+    console.log(elAccount.val())
+    console.log(elAccountDOM.value)
+
+    elAccount.val('456')
+
+    let elStudents = $('.student');
+    elStudents.each((index, student) => {
+        console.log(index, student)
+        student = $(student);
+        console.log(student.html())
+    })
+
+    let first = elStudents.eq(0);
+    console.log(first);
+    console.log(first[0])
+
+    elStudents.on('click', (e) => {
+        console.log(e.target.innerHTML);
+    })
+
+    let elStudentsDOM = document.querySelectorAll('.student')
+    elStudentsDOM.forEach(dom => {
+        dom.addEventListener('click', (e) => {
+            console.log('Origin')
+        })
+    })
 </script>
 
 </html>
